data/derived/comb/progs/unify/prog2564.ml.out
Characters 76-80:
  List.fold_left f base fs;;
                   ^^^^
Error: This expression has type int but an expression was expected of type
         'a -> 'b -> 'b
